src/objects/FieloAlpha__Branch__c.object
<CustomObject>
    <description>[Points] Your business’ branches or points of sale where members can generate points.</description>
    <fields>
        <fullName>FieloPLT__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__City__c</fullName>
        <description>City correspondent to the branch</description>
        <inlineHelpText>Enter the city where your branch is located.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Code__c</fullName>
        <description>Code related to the branch, it can be filled with branch number or just give them a desired name for each</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a code that will uniquely identify this branch.</inlineHelpText>
        <label>Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Country__c</fullName>
        <description>Country where the branch has operations</description>
        <inlineHelpText>Enter the country where your branch is located.</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Latitude__c</fullName>
        <description>Coordinate of the branch</description>
        <inlineHelpText>This field will autocomplete after you enter your branch address.</inlineHelpText>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Longitude__c</fullName>
        <description>Coordinate of the branch</description>
        <inlineHelpText>This field will autocomplete after you enter your branch address.</inlineHelpText>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__State__c</fullName>
        <description>State where the branch is located</description>
        <inlineHelpText>Enter the state or province where your branch is located.</inlineHelpText>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Street__c</fullName>
        <description>Street where the branch is located</description>
        <inlineHelpText>Enter the street where your branch is located.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ZipCode__c</fullName>
        <description>Location of the branch</description>
        <inlineHelpText>Enter the ZIP code for your branch.</inlineHelpText>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>FieloPLT__Code__c</columns>
        <columns>NAME</columns>
        <columns>FieloPLT__Street__c</columns>
        <columns>FieloPLT__City__c</columns>
        <columns>FieloPLT__State__c</columns>
        <columns>FieloPLT__Country__c</columns>
        <columns>FieloPLT__Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FieloPLT__All_Branches</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Branches</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>